template/flask-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-1
  namespace: default
spec:
  ports:
  - name: http
    nodePort: 33480
    port: 9080
    targetPort: 80
  selector: 
    app: flaskapp-1
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flaskapp-1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      name: flaskapp-1
      namespace: default
      labels:
        app: flaskapp-1
    spec:
      containers:
      - name: flaskapp-1
        image: 172.16.1.24/python/flask:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: pymount
          mountPath: /home/pytest
        command: ["python3"]
        args: ["/home/pytest/pytest.py"]
      volumes:
      - name: pymount
        hostPath:
          path: /mnt
      imagePullSecrets:
      - name: harbor-secret
