template/ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: flasks.liangyawang.com
    http:
      paths:
      - backend:
          serviceName: flaskapp-1
          servicePort: 9080
        path:
  tls:
  - secretName: flasks-ingress-secret
    hosts:
    - flasks.liangyawang.com
