template/networkPolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: access_http
spec:
  podSelector:
    matchLabels:
